fit_predictor/mkp_aco/evaluates/run3/2025-01-16_21-58-24/problem_iter3_response14.txt_stdout.txt
Traceback (most recent call last):
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/gpt.py", line 30
    indices_to_mutate = np.random.choice(np.arange/heuristics.size), num_mutations)
                                                                                  ^
SyntaxError: unmatched ')'
